# DopSteg

./: README.md
Instrumentation/: instrumentation.sh
Instrumentation/src/: CMakeLists.txt  GadgetAttacher.cpp  GadgetAttacher.h  GadgetController.cpp  GadgetController.h  GadgetGenerator.cpp  GadgetGenerator.h  LLVM.h  LLVMGlueLayer.cpp  LLVMGlueLayer.h  Util.h
Search/: search.sh
Search/graph-process-python/: README.md  filter.py  function_contribution_set.txt  function_non_contribution_set.txt  main.py  path.gv  path.txt  proftpd.ll.pta  proftpd_INFO  proftpd_function.txt  sel47.path
Search/src/: BackTrace.cpp  BackTrace.h  CMakeLists.txt  GadgetInfo.cpp  GadgetInfo.h  GadgetSearcher.cpp  GadgetSearcher.h  Interpreter.cpp  Interpreter.h  LocationInfo.cpp  LocationInfo.h  Utils.cpp  Utils.h
newflatten/: Makefile  README.md  compile_flags.txt  main.cpp  newFlatten.cpp
